# AMR_Security_System

./: README.md  compressed.py  mydatabase.db  yolov8_example.py
amr_yolo/: package.xml  setup.cfg  setup.py
amr_yolo/amr_yolo/: alarm_listener.py  amr_yolo.py
amr_yolo/launch/: start_yolo_tracking_and_publish.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amr_yolo/lib/amr_yolo/: amr_yolo
install/amr_yolo/share/amr_yolo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_image_subscriber/lib/my_image_subscriber/: trecking_mode  yolo_publisher
install/my_image_subscriber/share/my_image_subscriber/: package.sh  package.xml
install/my_image_subscriber/share/my_image_subscriber/templates/: welcome_center_two_cam.html
install/my_package/share/my_package/: package.sh
install/my_video_package/lib/my_video_package/: video_capture_node
install/my_video_package/share/my_video_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_custom_publishers/lib/turtlebot3_custom_publishers/: publish_initial_and_goal
install/turtlebot3_custom_publishers/share/turtlebot3_custom_publishers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_image_subscriber/: package.xml  setup.py
my_image_subscriber/config/: waypoints.yaml
my_image_subscriber/launch/: start_yolo_and_subscriber.launch.py
my_image_subscriber/my_image_subscriber/: image_subscriber.py  test.py  trecking_mode.py  yolo_publisher.py  yolo_tracking_publisher.py
my_image_subscriber/my_image_subscriber/templates/: index.html
my_package/: package.xml  setup.py
my_package/my_package/: subscriber.py
my_video_package/: setup.cfg  setup.py
my_video_package/my_video_package/: video_capture_node.py
test1/: package.xml  setup.py
turtlebot3_custom_publishers/: package.xml  setup.cfg  setup.py
turtlebot3_custom_publishers/turtlebot3_custom_publishers/: publish_initial_and_goal.py
yolo_publisher_pkg/: package.xml
