<?xml version="1.0"?>
<package format="3">
  <name>amr_yolo</name>
  <version>0.0.1</version>
  <description>A simple YOLO detection node for publishing detection info</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>

  <build_depend>python3-opencv</build_depend>
  <exec_depend>python3-opencv</exec_depend>

  <build_depend>python3-ultralytics</build_depend>
  <exec_depend>python3-ultralytics</exec_depend>

  <build_depend>python3-numpy</build_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
