<package format="3">
  <name>yolo_publisher_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 package for YOLO object detection and image publishing</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>


  <build_type>ament_python</build_type>  <!-- Add this line -->
</package>
