<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_video_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="100rudtjs@naver.com">rokey</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>sqlite3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
